marble template integration
